# docs/swagger.yaml
@@ -127,12 +127,18 @@ paths:
       summary: Create todo list
       tags:
       - lists
-  /api/lists/:id:
+  /api/lists/{id}:
     get:
       consumes:
       - application/json
       description: get list by id
       operationId: get-list-by-id
+      parameters:
+      - description: List ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
